# VanK

./: .gitignore  CMakeLists.txt  README.md
Facerun/Assets/Scripts/: CMakeLists.txt
Facerun/Assets/Scripts/Binaries/Intermediates/x64/Debug/: Facerun.csproj.AssemblyReference.cache  Facerun.csproj.CoreCompileInputs.cache  Facerun.csproj.FileListAbsolute.txt
Facerun/Assets/Scripts/Source/: Camera.cs
SandBox/: CMakeLists.txt
SandBox/src/: SandBox.cpp  Sandbox2D.cpp  Sandbox2D.h
VanK/: CMakeLists.txt
VanK-Editor/: CMakeLists.txt
VanK-Editor/SandboxProject/Assets/Scripts/: CMakeLists.txt
VanK-Editor/SandboxProject/Assets/Scripts/Source/: Camera.cs  Player.cs
VanK-Editor/SandboxProject/Assets/Scripts/config/: config-win.bat
VanK-Editor/assets/: imgui.ini
VanK-Editor/assets/Content/: Physics2D.vank  Physics2DCircle.vank  PinkCube1.vank  Texture.vank
VanK-Editor/assets/Content/Shaders/Compiled/SPIRV/: DepthOutline.frag  DepthOutline.frag.spv  PositionColorTransform.vert  PositionColorTransform.vert.spv  SolidColorDepth.frag  SolidColorDepth.frag.spv  SpriteBatch.comp  shader.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader2d.frag  shader2d.frag.spv  shader2d.vert  shader2d.vert.spv  shadercompile.bat  shadercompiles.bat
VanK-Editor/assets/shaders/: shader.CircleComp.slang  shader.CircleRast.slang  shader.LineRast.slang  shader.comp.glsl  shader.comp.slang  shader.frag.glsl  shader.glsl  shader.rast.slang  shader.vert.glsl  shader_io.h
VanK-Editor/src/: EditorLayer.cpp  EditorLayer.h  VanKEditorApp.cpp
VanK-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
VanK-ScriptCore/: CMakeLists.txt
VanK-ScriptCore/Source/VanK/: Input.cs  InternalCalls.cs  ScanCode.cs  Vector2.cs  Vector3.cs
VanK-ScriptCore/Source/VanK/Scene/: Components.cs  Entity.cs
VanK/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  debug_util.h
VanK/src/VanK/: Utils.cpp  Utils.h
VanK/src/VanK/Core/: Application.cpp  Application.h  Buffer.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  VanK.h  Window.cpp  Window.h  core.h  logger.h
VanK/src/VanK/Debug/: Instrumentor.h
VanK/src/VanK/Events/: ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.h  MouseEvent.h
VanK/src/VanK/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
VanK/src/VanK/Math/: Math.cpp  Math.h
VanK/src/VanK/Physics/: Physics2D.h
VanK/src/VanK/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
VanK/src/VanK/Renderer/: Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
VanK/src/VanK/Renderer/old/: Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
VanK/src/VanK/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
VanK/src/VanK/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
VanK/src/VanK/UI/: UI.h
config/: config-win.bat
